--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="Mapviewer" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Resourcemap</title>
+    <title>Mapr</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
